viaplay_vpc_ecs.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Test for viaplay.
Outputs:
  SecurityGroup:
    Description: Security Group for ECS Fargate
    Value: !Ref 'FargateSecurityGroup'
  SubnetA:
    Description: Subnet ID
    Value: !GetAtt 'SubnetA.SubnetId'
  SubnetB:
    Description: Subnet ID
    Value: !GetAtt 'SubnetB.SubnetId'
Resources:
  AttachGateway:
    Properties:
      InternetGatewayId: !Ref 'InternetGateway'
      VpcId: !Ref 'VPC'
    Type: AWS::EC2::VPCGatewayAttachment
  Cluster:
    Type: AWS::ECS::Cluster
  FargateSecurityGroup:
    Properties:
      GroupDescription: Enable HTTP access via port 8080
      SecurityGroupIngress:
        - CidrIp: '0.0.0.0/0'
          FromPort: '8080'
          IpProtocol: tcp
          ToPort: '8080'
      VpcId: !Ref 'VPC'
    Type: AWS::EC2::SecurityGroup
  InternetGateway:
    Properties:
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
    Type: AWS::EC2::InternetGateway
  Route:
    DependsOn: AttachGateway
    Properties:
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref 'InternetGateway'
      RouteTableId: !Ref 'RouteTable'
    Type: AWS::EC2::Route
  RouteTable:
    Properties:
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
      VpcId: !Ref 'VPC'
    Type: AWS::EC2::RouteTable
  SrvCustom002:
    Properties:
      Cluster: !Ref 'Cluster'
      DesiredCount: 1
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          SecurityGroups:
            - !Ref 'FargateSecurityGroup'
          Subnets:
            - !Ref 'SubnetA'
            - !Ref 'SubnetB'
      TaskDefinition: !Ref 'TaskDefinition'
    Type: AWS::ECS::Service
  SubnetA:
    Properties:
      AvailabilityZone: eu-west-3a
      CidrBlock: 10.0.0.0/24
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
      VpcId: !Ref 'VPC'
    Type: AWS::EC2::Subnet
  SubnetB:
    Properties:
      AvailabilityZone: eu-west-3b
      CidrBlock: 10.0.1.0/24
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
      VpcId: !Ref 'VPC'
    Type: AWS::EC2::Subnet
  SubnetRouteTableAssociationA:
    Properties:
      RouteTableId: !Ref 'RouteTable'
      SubnetId: !Ref 'SubnetA'
    Type: AWS::EC2::SubnetRouteTableAssociation
  SubnetRouteTableAssociationB:
    Properties:
      RouteTableId: !Ref 'RouteTable'
      SubnetId: !Ref 'SubnetB'
    Type: AWS::EC2::SubnetRouteTableAssociation
  TaskDefinition:
    Properties:
      ContainerDefinitions:
        - Essential: true
          Image: 203919308041.dkr.ecr.eu-west-3.amazonaws.com/test-viaplay:latest
          Name: td_viaplay002
          PortMappings:
            - ContainerPort: 8080
      Cpu: '256'
      ExecutionRoleArn: arn:aws:iam::203919308041:role/ecsTaskExecutionRole
      Memory: '512'
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
    Type: AWS::ECS::TaskDefinition
  VPC:
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
    Type: AWS::EC2::VPC
